# StackPilot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bad_recommendation.md  bug-report.yml  bug_report.md  feature-request.yml  hardware-detection-feedback.yml  template_request.md  wrong-recommendation.yml
.github/workflows/: ci.yml  tests.yml
configs/: app_catalog.json  scoring_rules.json
configs/templates/: ai_beginner.json  coding_starter.json  comfyui_starter.json  creator_setup.json  gaming_setup.json  local_llm.json  minecraft_realism.json  office_productivity.json  vibe_coding.json
docs/: ARCHITECTURE.md  SAFETY.md
docs/feedback/: feedback-template.md  qq-group-feedback.md  real-machine-tests.md
docs/promotion/: gpu-feedback-request.md  qq-group-message.md  release-summary-v0.3-v0.4.md  short-project-intro.md
examples/: README.md  gpu-detection-example.md  install-plan-example.md  real-machine-feedback-example.md  recommend-comfyui-example.md  scan-example.md
src/stackpilot/: __init__.py  cli.py  detector.py  main.py  models.py  recommender.py  report.py  reporter.py  scanner.py  scorer.py  templates.py  (+1 more)
tests/: test_build.py  test_cli.py  test_entrypoints.py  test_gpu_classifier.py  test_gpu_detection_fixtures.py  test_gpu_selector.py  test_hardware_fixtures.py  test_llm_prompt_builder.py  test_models.py  test_plans.py  test_platform_detector.py  test_readiness_artifacts.py  test_recommender.py  test_report.py  test_reporter.py  test_rules.py  test_scanner.py  test_scanner_windows_snapshot.py  test_templates.py  test_tui.py  test_windows_cim_parser.py  test_windows_gpu_parser.py
(+53 files in other folders)
