[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stackpilot"
version = "0.1.0"
description = "Open-source environment blueprint generator."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "StackPilot contributors" }
]
dependencies = [
  "typer>=0.9",
  "pydantic>=1.10",
  "rich>=13.0",
  "psutil>=5.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
stackpilot = "stackpilot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest_tmp"
